--- a/SourceCode/benchmark/src/main/java/com/fptu/benchmark/benchmark/mainFrame.form
+++ b/SourceCode/benchmark/src/main/java/com/fptu/benchmark/benchmark/mainFrame.form
@@ -55,7 +55,7 @@
   <SubComponents>
     <Component class="javax.swing.JTextField" name="jsonField">
       <Properties>
-        <Property name="text" type="java.lang.String" value="E:\u005cfinal project\u005cbenchmark\u005ctest.json" containsInvalidXMLChars="true"/>
+        <Property name="text" type="java.lang.String" value="E:\u005cfinal project\u005cFinalProject\u005cSourceCode\u005cbenchmark\u005ctest.json" containsInvalidXMLChars="true"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jsonFieldActionPerformed"/>
