--- a/SourceCode/benchmark/src/main/java/com/fptu/benchmarks/view/mainFrame.form
+++ b/SourceCode/benchmark/src/main/java/com/fptu/benchmarks/view/mainFrame.form
@@ -44,7 +44,7 @@
                       <EmptySpace max="32767" attributes="0"/>
                       <Component id="btnShowReport" min="-2" pref="117" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
-                      <Component id="btnNext1" min="-2" pref="99" max="-2" attributes="0"/>
+                      <Component id="btnNext" min="-2" pref="99" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="83" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -65,7 +65,7 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Component id="btnBack" pref="41" max="32767" attributes="0"/>
-                  <Component id="btnNext1" max="32767" attributes="0"/>
+                  <Component id="btnNext" max="32767" attributes="0"/>
                   <Component id="btnShowReport" alignment="1" max="32767" attributes="0"/>
               </Group>
               <EmptySpace pref="18" max="32767" attributes="0"/>
@@ -220,7 +220,7 @@
           <SubComponents>
             <Component class="javax.swing.JLabel" name="jLabel4">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Profile(s):"/>
+                <Property name="text" type="java.lang.String" value="Profile Level:"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JComboBox" name="cbbLevel">
@@ -399,14 +399,14 @@
         </Container>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JButton" name="btnNext1">
+    <Component class="javax.swing.JButton" name="btnNext">
       <Properties>
         <Property name="text" type="java.lang.String" value="Next"/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Events>
-        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnNext1MouseClicked"/>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNext1ActionPerformed"/>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnNextMouseClicked"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNextActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnBack">
