--- a/SourceCode/benchmark/src/main/java/com/fptu/benchmarks/view/mainFrame.form
+++ b/SourceCode/benchmark/src/main/java/com/fptu/benchmarks/view/mainFrame.form
@@ -345,6 +345,7 @@
               </Properties>
               <Events>
                 <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="chkbDocxReportMouseClicked"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="chkbDocxReportActionPerformed"/>
               </Events>
             </Component>
             <Container class="javax.swing.JScrollPane" name="jScrollPane3">
